--- a/index.html
+++ b/index.html
@@ -8,33 +8,151 @@
     <link rel="stylesheet" href="css/imports/bootstrap.css">
     <link rel="stylesheet" href="css/madkom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css">
 </head>
-<body ui-view="homeView">
+<body>
+<section class="left">
+    <div>
+        <h1 class="hide">Strona główna</h1>
 
+        <!-- SHOW ALL REGISTRIES -->
+        <div class="show_registries" style="position: fixed;"></div>
+        <article class="show_registries">
+            <header>
+                <button class="add register" ng-init="showBar=false" ng-click="showBar = !showBar" ui-sref="homeView.registry"><i>+</i> DODAJ REJESTR</button>
+            </header>
+            <section ng-repeat="registry in vm.registries">
+                <h2 class="hide">Lista rejestrów</h2>
+                <ul class="list">
+                    <li class="{{ registry.selected }}" >
+                        <a href="../web/rejestry/{{ registry.id }}">{{ registry.name }}</a>
+                    </li>
+                </ul>
+            </section>
+        </article>
 
-<section class="left" ui-view="sidebarView">
-    <!-- left sidebar -->
+        <article class="add_registries" ng-class="showBar ? 'show' : 'hide' " ui-view="addRegistryView">
+            <header>
+                <h2 class="title">DODAWANIE REJESTRU</h2>
+            </header>
+
+            <section>
+                <!-- Panel to add new registry -->
+                <div>
+                    <h2 class="hide">Dodaj pozycję w rejestrze</h2>
+                    <form action="#">
+                        <fieldset name="registry">
+                            <div>
+                                <input type="text" placeholder="Wpisz nazwę rejestru" name="name" id="name" />
+                            </div>
+
+                            <br />
+
+                            <div>
+                                <select id="type" name="type[]">
+                                    <option value="volvo" selected="selected" disabled>Wybierz typ rejestru</option>
+                                    <option ng-repeat="registry in vm.registries" value="{{ registry.type }}">{{
+                                        registry.typeName }}</option>
+                                </select>
+                            </div>
+                        </fieldset>
+                        <button type="submit" class="add" ui-sref="home">ZAPISZ</button>
+                    </form>
+                </div>
+            </section>
+        </article>
+    </div>
 </section>
 
-<section class="content" ui-view="contentView">
-    <!-- main content of page -->
+<section class="content">
+    <h2 class="hide">Main content</h2>
+    <article class="add_position">
+        <header>
+            <div class="push_down"></div>
+            <h2 class="pos_title">DODAWANIE POZYCJI</h2>
+        </header>
+
+        <div class="position_form">
+            <form action="#">
+                <fieldset name="position">
+                    <div>
+                        <label>
+                            <span style="width: 155px; display: inline-block;">Marka:</span>
+                            <input type="text" placeholder="np. Fiat" name="name" id="brand" />
+                        </label>
+                        <br>
+                        <label>
+                            <span style="width: 155px; display: inline-block;">Model:</span>
+                            <input type="text" placeholder="np. 126p" name="name" id="model" />
+                        </label>
+                        <br>
+                        <label>
+                            <span style="width: 155px; display: inline-block;">Numer rejestracyjny:</span>
+                            <input type="text" placeholder="np. GD 12345" name="name" id="regno" />
+                        </label>
+                        <br>
+                    </div>
+                    <div>
+                        <label>
+                            <span style="width: 155px; display: inline-block;">Termin OC:</span>
+                            <input type="date"  name="name" id="oc" />
+                            <input type="text"  name="name" id="ocdep" />
+                        </label>
+                        <br>
+                        <label>
+                            <span style="width: 155px; display: inline-block;">Termin AC:</span>
+                            <input type="date"  name="name" id="ac" />
+                            <input type="text"  name="name" id="acdep" />
+                        </label>
+                        <br>
+                        <label>
+                            <span style="width: 155px; display: inline-block;">Termin przeglądu:</span>
+                            <input type="date"  name="name" id="review" />
+                            <input type="text"  name="name" id="reviewdep" />
+                        </label>
+                        <br>
+                    </div>
+                    <br>
+                    <div>
+                        <label for="title">
+                            <span style="width: 155px; display: inline-block;">Opis samochodu:</span>
+                            <textarea rows="5" id="title" name="title"></textarea>
+                        </label>
+                        <br>
+
+                    </div>
+
+                </fieldset>
+                <div class="upload">
+                    <input type="file" name="name" id="attachment"/>
+                    <button class="position right">ZAPISZ</button>
+                </div>
+            </form>
+        </div>
+    </article>
+
+    <header class="buttons">
+        <a class="btn addpos" ><i class="fa fa-plus"></i>Dodaj pozycję</a>
+        <!--<a href="#" class="btn removepos"><i class="fa fa-trash-o"></i>Usuń zaznaczone</a>-->
+    </header>
+
+    <div>
+        <main>
+        </main>
+    </div>
 </section>
 
 
 <!-- Library Scripts -->
-<script src="js/jquery.js"></script>
-<script src="js/angular.js"></script>
-<script src="js/angular-resource.js"></script>
-<script src="js/angular-mocks.js"></script>
-<script src="js/angular-ui-router.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/ui-utils.js"></script>
-<script src="js/ui-bootstrap-tpls-0.11.0.js"></script>
-<script src="js/d3.js"></script>
-<script src="js/angular-charts.min.js"></script>
-<script src="bower_components/ng-table/dist/ng-table.js"></script>
-<script src="bower_components/angular-ui-grid/ui-grid.js"></script>
+<script src="assets/js/jquery.js"></script>
+<script src="assets/js/angular.js"></script>
+<script src="assets/js/angular-resource.js"></script>
+<script src="assets/js/angular-mocks.js"></script>
+<script src="assets/js/angular-ui-router.js"></script>
+<script src="assets/js/bootstrap.js"></script>
+<script src="assets/js/ui-utils.js"></script>
+<script src="assets/js/ui-bootstrap-tpls-0.11.0.js"></script>
+<script src="assets/js/d3.js"></script>
+<script src="assets/js/angular-charts.min.js"></script>
 
 <!-- Application script -->
 <script src="app/app.js"></script>
@@ -42,14 +160,14 @@
 <!-- Services -->
 <script src="common/services/common.services.js"></script>
 
-<script src="common/services/positionResource.js"></script>
-<script src="common/services/registryResource.js"></script>
+<script src="common/resources/positionResource.js"></script>
+<script src="common/resources/registryResource.js"></script>
 
-<script src="common/services/positionResourceMock.js"></script>
-<script src="common/services/registryResourceMock.js"></script>
+<script src="common/mocks/positionResourceMock.js"></script>
+<script src="common/mocks/registryResourceMock.js"></script>
 
 <!-- Controllers -->
-<script src="app/registries/registryListCtrl.js"></script>
+<script src="app/registries/controllers/registryListCtrl.js"></script>
 <script src="app/positions/controllers/positionListCtrl.js"></script>
 
 
@@ -61,10 +179,6 @@
                             $(".add_position").css("display: none");
                         })
             });
-
 </script>
 </body>
 </html>
-
-GUI:
-
