--- a/index.html
+++ b/index.html
@@ -10,135 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
-<section class="left">
-    <div>
-        <h1 class="hide">Strona główna</h1>
-
-        <!-- SHOW ALL REGISTRIES -->
-        <div class="show_registries" style="position: fixed;"></div>
-        <article class="show_registries">
-            <header>
-                <button class="add register" ng-init="showBar=false" ng-click="showBar = !showBar" ui-sref="homeView.registry"><i>+</i> DODAJ REJESTR</button>
-            </header>
-            <section ng-repeat="registry in vm.registries">
-                <h2 class="hide">Lista rejestrów</h2>
-                <ul class="list">
-                    <li class="{{ registry.selected }}" >
-                        <a href="../web/rejestry/{{ registry.id }}">{{ registry.name }}</a>
-                    </li>
-                </ul>
-            </section>
-        </article>
-
-        <article class="add_registries" ng-class="showBar ? 'show' : 'hide' " ui-view="addRegistryView">
-            <header>
-                <h2 class="title">DODAWANIE REJESTRU</h2>
-            </header>
-
-            <section>
-                <!-- Panel to add new registry -->
-                <div>
-                    <h2 class="hide">Dodaj pozycję w rejestrze</h2>
-                    <form action="#">
-                        <fieldset name="registry">
-                            <div>
-                                <input type="text" placeholder="Wpisz nazwę rejestru" name="name" id="name" />
-                            </div>
-
-                            <br />
-
-                            <div>
-                                <select id="type" name="type[]">
-                                    <option value="volvo" selected="selected" disabled>Wybierz typ rejestru</option>
-                                    <option ng-repeat="registry in vm.registries" value="{{ registry.type }}">{{
-                                        registry.typeName }}</option>
-                                </select>
-                            </div>
-                        </fieldset>
-                        <button type="submit" class="add" ui-sref="home">ZAPISZ</button>
-                    </form>
-                </div>
-            </section>
-        </article>
-    </div>
+<section class="left" ui-view="sidebarView">
 </section>
 
-<section class="content">
-    <h2 class="hide">Main content</h2>
-    <article class="add_position">
-        <header>
-            <div class="push_down"></div>
-            <h2 class="pos_title">DODAWANIE POZYCJI</h2>
-        </header>
-
-        <div class="position_form">
-            <form action="#">
-                <fieldset name="position">
-                    <div>
-                        <label>
-                            <span style="width: 155px; display: inline-block;">Marka:</span>
-                            <input type="text" placeholder="np. Fiat" name="name" id="brand" />
-                        </label>
-                        <br>
-                        <label>
-                            <span style="width: 155px; display: inline-block;">Model:</span>
-                            <input type="text" placeholder="np. 126p" name="name" id="model" />
-                        </label>
-                        <br>
-                        <label>
-                            <span style="width: 155px; display: inline-block;">Numer rejestracyjny:</span>
-                            <input type="text" placeholder="np. GD 12345" name="name" id="regno" />
-                        </label>
-                        <br>
-                    </div>
-                    <div>
-                        <label>
-                            <span style="width: 155px; display: inline-block;">Termin OC:</span>
-                            <input type="date"  name="name" id="oc" />
-                            <input type="text"  name="name" id="ocdep" />
-                        </label>
-                        <br>
-                        <label>
-                            <span style="width: 155px; display: inline-block;">Termin AC:</span>
-                            <input type="date"  name="name" id="ac" />
-                            <input type="text"  name="name" id="acdep" />
-                        </label>
-                        <br>
-                        <label>
-                            <span style="width: 155px; display: inline-block;">Termin przeglądu:</span>
-                            <input type="date"  name="name" id="review" />
-                            <input type="text"  name="name" id="reviewdep" />
-                        </label>
-                        <br>
-                    </div>
-                    <br>
-                    <div>
-                        <label for="title">
-                            <span style="width: 155px; display: inline-block;">Opis samochodu:</span>
-                            <textarea rows="5" id="title" name="title"></textarea>
-                        </label>
-                        <br>
-
-                    </div>
-
-                </fieldset>
-                <div class="upload">
-                    <input type="file" name="name" id="attachment"/>
-                    <button class="position right">ZAPISZ</button>
-                </div>
-            </form>
-        </div>
-    </article>
-
-    <header class="buttons">
-        <a class="btn addpos" ><i class="fa fa-plus"></i>Dodaj pozycję</a>
-        <!--<a href="#" class="btn removepos"><i class="fa fa-trash-o"></i>Usuń zaznaczone</a>-->
-    </header>
-
-    <div>
-        <main>
-        </main>
-    </div>
+<section class="content" ui-view="contentView">
 </section>
 
 
@@ -160,25 +35,25 @@
 <!-- Services -->
 <script src="common/services/common.services.js"></script>
 
-<script src="common/resources/positionResource.js"></script>
-<script src="common/resources/registryResource.js"></script>
+<script src="common/services/positionResource.js"></script>
+<!--<script src="common/services/registryResource.js"></script>-->
 
-<script src="common/mocks/positionResourceMock.js"></script>
-<script src="common/mocks/registryResourceMock.js"></script>
+<script src="common/services/positionResourceMock.js"></script>
+<!--<script src="common/services/registryResourceMock.js"></script>-->
 
 <!-- Controllers -->
-<script src="app/registries/controllers/registryListCtrl.js"></script>
+<!--<script src="app/registries/controllers/registryListCtrl.js"></script>-->
 <script src="app/positions/controllers/positionListCtrl.js"></script>
 
 
 <script>
-    $(document)
+/*    $(document)
             .on("click", ".addpos", function () {
                 $(".add_position")
                         .toggle(120, function () {
                             $(".add_position").css("display: none");
                         })
-            });
+            });*/
 </script>
 </body>
 </html>
