--- a/app/contentView.html
+++ b/app/contentView.html
@@ -1,5 +1,5 @@
 <h2 class="hide">Main content</h2>
-<article class="add_position">
+<!--<article class="add_position">
     <header>
         <div class="push_down"></div>
         <h2 class="pos_title">DODAWANIE POZYCJI</h2>
@@ -62,7 +62,7 @@
             </div>
         </form>
     </div>
-</article>
+</article>-->
 
 <header class="buttons">
     <a class="btn addpos" ><i class="fa fa-plus"></i>Dodaj pozycję</a>
@@ -71,6 +71,6 @@
 
 <div>
     <main>
-        <div ui-view></div>
+        <div ui-view="PositionList"></div>
     </main>
 </div>
