--- a/app/sidebarView.html
+++ b/app/sidebarView.html
@@ -5,7 +5,7 @@
 
 <article class="show_registries">
     <header>
-        <button class="add register" ng-init="showBar=false" ng-click="showBar = !showBar" ui-sref="main.registry"><i>+</i> DODAJ REJESTR</button>
+        <button class="add register" ng-init="showBar=false" ng-click="showBar = !showBar" ui-sref="main.registry.add"><i>+</i> DODAJ REJESTR</button>
     </header>
     <div ui-view="RegistryList"></div>
 </article>
